(r4360) Enable scrolling the terrain graphics list in the editor with the mouse wheel.
(r4358) Fix a vanilla buffer underrun, which occurs when displaying a multiline text containing a word longer than the maximum line width.  The most prominent example is the item view in the map editor with the German data files ("Leichte Panzerabwehrwaffe").
(r4357) Make the map editor available via the command line parameter -editor.
(r4303) Fix a vanilla bug, which restored a wrong amount of breath points at the start of the turn.

v0.10 - 2008-06-02 - Caramel
(r4277) Fix a vanilla glitch regarding uneven distribution when playing some merc battle sounds, in one case even playing the wrong sound.
(r4275) Fix a bug in r668, which caused wrong title bars to be displayed for some web pages.
(r4269) Fix a vanilla out of bounds array access when somebody gets hit.
(r4200) Fix a vanilla bug, which caused stacked items to be too heavy.
(r4169) Enable scrolling the sector inventory with the mouse wheel.
(r4040) Fix several vanilla inconsistencies when placing the assignment dropdown menus.
(r3952, r3955, r3957, r3965, r3966, r3967, r3968, r3969, r3971) Plug vanilla memory and file leaks (mostly in error handling).
(r3920) Fix a vanilla string buffer overrun, occuring in the French and Italian translations, when displaying the turn message at the top in combat.
(r3919, r4161) Fix vanilla bugs, which accessed uninitialised data.
(r3918) Fix a bug in r3226, which broke saving/loading savegames in the Windows version.
(r3915) Fix a vanilla bug, which made items invisible, end up on the wrong level (floor/roof) or hover above the ground, when shuffling them in the sector inventory.
(r3914) Fix a bug in r2162, which could cause less militia to appear in a sector than there should.
(r3908) Fix a vanilla bug, which prevented the army from attacking San Mona, when the player has defense in Grumm.

v0.9 - 2008-04-22 - Blueberry